--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+argh==0.26.2
 cmake==3.15.3
 dlib==19.17.0
 imutils==0.5.3
@@ -5,8 +6,11 @@ joblib==0.14.0
 numpy==1.17.3
 opencv-contrib-python==4.1.1.26
 opencv-python==4.1.1.26
+pathtools==0.1.2
 pyfacy==1.0.1
 pyfacy-dlib-models==0.0.4
+PyYAML==5.1.2
 scikit-learn==0.21.3
 scipy==1.3.1
 sklearn==0.0
+watchdog==0.9.0
